assets/css/custom.css
body {
    overflow: scroll;
}

.container-fluid {
    padding-left: 0;
    padding-right: 0;
}

.row {
    margin: 0;
    padding-top: 4rem;
    padding-bottom: 4rem;
}

.panel, .panel-deafult, .panel-default>.panel-heading {
    background: 0 0;
    border-color: transparent;
    box-shadow: none;
}

.panel-title {
    font-size: inherit;
}
.panel-title>a {
    color: #263363;
}
.panel-title>a:active, .panel-title>a:focus, .panel-title>a:hover {
    color: #6c0c0c;
}
.panel-title>a:active, .panel-title>a:focus {
    text-decoration: none;
    font-style: italic;
}
.form-control:focus {
    border-color: #263363;
}
.btn-default {
    color: #d3dbf7;
    background-color: #263363;
    border-color: #222e59;
}
.btn-default:active, .btn-default:hover {
    background-color: #6c0c0c;
    border-color: #610b0b;
    color: #d3dbf7;
}
@media only screen and (min-width:992px) {
  .main-nav {
    padding: 0;
    margin-bottom: 2rem;
    border-bottom: #e0e4e7 1px solid;
    display: block;
  }
}

@media only screen and (max-width:900px) {
  .main-nav {
    padding: 0;
  }
  .main-header {
    position: static;
    height: 100%
  }
}

@media screen and (min-width:768px) {
}

@media only screen and (max-width:500px) {
  .main-header {
    position: static;
    min-height: 100%;
    width: 100%
  }
}

h2 {
    text-align: left;
}

.main-header {
    padding: 0;
}
.page-description, .page-title {
    color: #f9f6eb!important;
     text-shadow:  2px 2px 0px #000;
}
.alt-border {
    border-right-style:  double;
    border-right-width:  7px;
    border-right-color:  #D3D3D3;
    padding-right:  10px;
}
.main-nav {
    padding: 35px 40px;
    margin: 0 0 30px;
}
.main-nav.overlay a {
    color: #fdf9f0;
}
.main-nav.overlay a:hover {
    color: #070b26;
    border-color: #fdf9f0;
    background: #fdf9f0;
    transition: all .1s ease;
}
/*.site-footer {
 *     background: #070b26;
 *         border-top: #05081b 1px solid;
 *             font-size: .8em;
 *                 padding: 3em;
 *                 }
 *                 */
.site-footer {
    background: #070b26;
    border-top: #05081b 1px solid;
    font-size: .8em;
    padding: 3em;
}
.site-footer a:hover {
    color: #6c0c0c;
}
.copyright, .poweredby {
    color: #d3dbf7;
    background: #070b26;
}

@media screen and (max-width:500px) {
  .site-footer {
    margin-top: 0;
  }
}

#top-menu-container {
    display: block;
    position: fixed;
    margin: 0;
    background: rgba(25, 26, 28, .8);
    left: 0;
    right: 0;
    top: 0;
    text-align: center;
    z-index: 5;
    padding: 2rem 0;
}
#top-menu {
    margin: 0;
    :padding;
}
#top-menu li {
    list-style-type: none;
    display: inline;
    font-family: Merriweather, Georgia, serif;
    padding: 0 3rem;
}
#top-menu a {
    padding: 0;
    color: #fdf9f0;
    text-decoration: none;
    border-top: 3px rgba(240, 232, 206, .9);
    font-size: 18px!important;
    -webkit-transition: .5s all ease-out;
    -moz-transition: .5s all ease-out;
    transition: .5s all ease-out;
}
#top-menu a:hover {
    color: #a11212;
}
nav ol, nav ul {
    list-style: none;
}
#mobile-menu {
    display: block;
    width: 100%;
    background-color: #63696f;
    padding: 3rem;
}
#mobile-menu ul {
    margin: 0;
    padding: 0;
}
#mobile-menu li {
    margin: 0;
    list-style: none;
    line-height: 1.2;
}
#mobile-menu a {
    display: block;
    padding: .6em 0;
    transition-property: all;
    transition-duration: .2s;
    transition-timing-function: linear;
}
#mobile-menu a:link, #mobile-menu a:visited {
    color: #fdf9f0;
}
#mobile-menu a:hover, #mobile-menu a:visited:hover {
    color: #6c0c0c;
}
#mobile-menu .title {
    display: block;
    margin: 0 0 .2em;
    font-family: "Droid Sans", sans-serif;
    font-weight: 700;
    font-style: normal;
    text-transform: uppercase;
}
#mobile-menu .description {
    display: block;
    font-family: Merriweather, Georgia, serif;
    font-weight: 400;
    font-style: italic;
    font-size: .8em;
}
.inner {
    margin: 0 auto;
    padding: 0 1em;
}
.mobile-menu-trigger {
    -webkit-box-sizing: border-box;
    -moz-box-sizing: border-box;
    box-sizing: border-box;
    display: inline-block;
    float: right;
    height: 38px;
    padding: 0 20px;
    border: 1px solid transparent;
    color: #fdf9f0;
    text-align: center;
    font-size: 12px;
    text-transform: uppercase;
    line-height: 35px;
    white-space: nowrap;
    border-radius: 3px;
    background: rgba(0, 0, 0, .1);
    transition: all ease .3s;
}
a.mobile-menu-trigger {
    color: #fdf9f0;
}
.main-nav.overlay .mobile-menu-trigger {
    border-color: #fdf9f0;
}
@media only screen and (min-width:960px) {
    #mobile-menu, #mobile-menu-nav {
      display: none;
  }
  #top-menu-container {
    display: block;
  }
}

@media only screen and (max-width:959px) {
  #top-menu-container {
    display: none;
  }
  #mobile-menu, #mobile-menu-nav {
    display: block;
  }
}

@media only screen and (max-width:900px) {
  .main-nav {
    padding: 15px;
  }
}

@media only screen and (max-width:500px) {
  #mobile-menu-nav .main-nav.overlay .back-button, .main-nav.overlay .mobile-menu-trigger {
    border-color: transparent;
  }
  .main-nav {
      padding: 0;
      margin-bottom: 2rem;
  }
  .main-nav a {
      text-decoration: none;
      font-family: "Open Sans", sans-serif;
      background: 0 0;
  }
  .main-nav.overlay a:hover {
      color: #fdf9f0;
      border-color: transparent;
      background: 0 0;
      transition: none;
  }
}

@media screen and (min-width:61em) {
  #mobile-menu .primary, #mobile-menu .secondary {
    position: absolute
    width:32%
  }
}

@media screen and (min-width:61em) {
  #mobile-menu .primary {
    text-align: left
    left:1em;
  }
}

@media screen and (min-width:61em) {
  #mobile-menu .secondary {
    text-align: right
    right:1em;
  }
}

section {
    background: #d3dbf7;
    color: #070b26;
}
section.alt-color {
    background: #fdf9f0;
    color: #63696f;
}
section.alt-color h2 {
    color: #63696f;
}
.escape-overlay {
    background: url(../img/overlay-sm.png) repeat-x;
    min-height: 100%;
    width: 100%
}

.parallax-container {
    max-width: 960px;
    margin: 0 auto;
}
section.module:last-child {
    margin-bottom: 0;
}
section.module.parallax {
    height: 300px;
    background-position: center center;
    background-repeat: no-repeat;
    background-attachment: fixed;
    -webkit-background-size: cover;
    -o-background-size: cover;
    background-size: cover;
}
section.module.parallax h1 {
    color: #fdf9f0;
    font-family: "Droid Sans", sans-serif;
    font-size: 3em;
    letter-spacing: 0;
    line-height: 300px;
    font-weight: 700;
    text-align: center;
    text-transform: uppercase;
    text-shadow: 0 0 10px rgba(0, 0, 0, .2);
    text-indent: 0;
}
section.module.parallax-chambers {
    background-image: url(../img/parallax-mansion-front.jpg);
}
section.module.parallax-tips {
    background-image: url(../img/parallax-heavens.jpg);
}
section.module.parallax-faqs {
    background-image: url(../img/parallax-cats.jpg);
}
section.module.parallax-location {
    background-image: url(../img/parallax-river.jpg);
}
section.module.parallax-sign-up {
    background-image: url(../img/parallax-mansion-side.jpg);
}

@media screen and (max-width:500px) {
  section.module.parallax {
      height: 300px;
      background-attachment: inherit;
  }
  section.module.parallax h1 {
      line-height: 300px;
      font-size: 2.6rem;
  }
  section.module.parallax-chambers {
      background-image: url(../img/parallax-mansion-front-small.jpg);
  }
  section.module.parallax-tips {
      background-image: url(../img/parallax-heavens-small.jpg);
  }
  section.module.parallax-faqs {
      background-image: url(../img/parallax-cats-small.jpg);
  }
  section.module.parallax-location {
      background-image: url(../img/parallax-river-small.jpg);
  }
  section.module.parallax-sign-up {
      background-image: url(../img/parallax-mansion-side-small.jpg);
  }
}

.mc-header-form, .mc-section-form {
    padding-top: 0;
}
.mc-container {
    width: auto;
    max-width: 50rem;
    float: none;
    display: block;
    margin-right: auto;
    margin-left: auto;
    padding-left: 0;
    padding-right: 0;
    padding-top: 5rem;
}
.mc-container:after, .mc-container:before {
    content: '';
    display: table;
}
.mc-container:after {
    clear: both;
}
.escape-social-media {
    padding-top: 0;
}
.escape-social-media a i {
    float: right;
    padding: 6px;
}
.escape-social-media a:hover {
    color: #6c0c0c;
}
body {
    font-size: 18px;
}
h1, h2, h3, h4, h5, h6, p {
    line-height: 1.7;
}
h1 {
    font-size: 4rem;
}
h2 {
    font-size: 3rem;
}
a {
    color: #263363;
}
a:focus, a:hover {
    color: #6c0c0c;
    text-decoration: none!important;
}
#mobile-menu a {
    font-size: 1.8rem;
}
.btn-lg {
    color: #d3dbf7;
    background-color: #263363;
    border-color: #222e59;
    font-weight:  500;
    font-size:  18px;
}
.btn-lg:active, .btn-lg:hover {
    background-color: #6c0c0c;
    border-color: #610b0b;
    color: #d3dbf7;
}
section.module.parallax-images {
    background-image: url(../img/parallax-images-logos-small.jpg);
}
section.module.parallax-quotes {
    background-image: url(../img/parallax-quotes-small.jpg);
}
section.module.parallax-press-releases {
    background-image: url(../img/parallax-press-releases-small.jpg);
}
section.module.parallax-social-media {
    background-image: url(../img/parallax-social-media-small.jpg);
}

ol.thumb-grid li {
  float: left;
  width:  150px;
  height:  200px;
  margin:  20px 20px 20px 10px;
  list-style-type:  none;
}

ol.thumb-grid li img  {
  width:  100%;
  margin-bottom:  5px;
}

.caption-press  {
  line-height:  1.2;
  font-size:  70%;
  margin-bottom:  5px;
}

a {
  text-decoration:  underline;
}

a.no-underline {
  text-decoration:  none;
}

#social-media-links a {
  padding:  6px;
}

#social-media-links .links  {
  margin-bottom:  40px;
}

footer.footer  {
  background-color:  #070b26;
  color:  #d3dbf7;
  font-family:  "Open Sans", sans-serif;
  font-size: 0.8em;
  line-height: 1.75em;
}

footer.footer a {
  color:  #bbc7cc;
  font-weight:  700;
}

h2, h3, h4 {
  font-weight: bold;
}

